# ezEngine

./: .editorconfig  .gitignore  CMakeLists.txt  vcpkg.json
Code/BuildSystem/CMake/: FindD3D12.cmake  ezUtils.cmake
Code/EditorPlugins/AmplitudeAudio/: CMakeLists.txt
Code/EditorPlugins/AmplitudeAudio/EditorPluginAmplitudeAudio/: AmplitudeAudioPlugin.ezPluginBundle  CMakeLists.txt  EditorPluginAmplitudeAudio.cpp  EditorPluginAmplitudeAudioDLL.h  EditorPluginAmplitudeAudioPCH.cpp  EditorPluginAmplitudeAudioPCH.h  finalize.cmake
Code/EditorPlugins/AmplitudeAudio/EditorPluginAmplitudeAudio/Actions/: AmplitudeAudioActions.cpp  AmplitudeAudioActions.h
Code/EditorPlugins/AmplitudeAudio/EditorPluginAmplitudeAudio/Assets/: AmplitudeAudioControlCollectionAsset.cpp  AmplitudeAudioControlCollectionAsset.h  AmplitudeAudioControlCollectionAssetManager.cpp  AmplitudeAudioControlCollectionAssetManager.h  AmplitudeAudioControlCollectionAssetWindow.moc.cpp  AmplitudeAudioControlCollectionAssetWindow.moc.h
Code/EditorPlugins/AmplitudeAudio/EditorPluginAmplitudeAudio/Core/: AmplitudeAudioControlsManager.cpp  AmplitudeAudioControlsManager.h
Code/EditorPlugins/AmplitudeAudio/EditorPluginAmplitudeAudio/Dialogs/: AmplitudeAudioSettingsDialog.cpp  AmplitudeAudioSettingsDialog.moc.h  AmplitudeAudioSettingsDialog.ui
Code/EditorPlugins/AmplitudeAudio/EditorPluginAmplitudeAudio/QtResources/: resources.qrc
Code/EditorPlugins/RAI/: CMakeLists.txt
Code/Engine/Core/: CMakeLists.txt
Code/Engine/Core/GameApplication/Implementation/: GameApplicationBaseInit.cpp
Code/Engine/Core/Graphics/: Camera.h
Code/Engine/Core/Graphics/Implementation/: Camera_inl.h  Geometry.cpp
Code/Engine/Core/Physics/: SurfaceResourceDescriptor.h
Code/Engine/Core/Physics/Implementation/: SurfaceResourceDescriptor.cpp
Code/Engine/Core/System/: Window.h
Code/Engine/Core/System/Implementation/: Window.cpp
Code/Engine/Core/World/: GameObject.h
Code/Engine/Core/World/Implementation/: GameObject_inl.h  World.cpp  WorldData.cpp
Code/Engine/Foundation/: CMakeLists.txt
Code/Engine/RAI/: BlendShape.h  CMakeLists.txt  Core.h  Image.h  Mesh.h  RAIDLL.h  RAIPCH.cpp  RAIPCH.h  RootMaterial.h  Sampler.h  Shader.h  ShaderVariant.h  Skeleton.h  Texture.h  Texture2D.h
Code/Engine/RAI/Implementation/: BlendShape.cpp  Image.cpp  Mesh.cpp  Mesh_inl.h  RootMaterial.cpp  RootMaterial_inl.h  Sampler.cpp  Shader.cpp  ShaderVariant.cpp  ShaderVariant_inl.h
Code/Engine/RAI/Implementation/Import/: MeshImporter.cpp
Code/Engine/RAI/Implementation/Resources/: BlendShapeResource.cpp  ImageResource.cpp  MeshResource.cpp  RootMaterialResource.cpp  SamplerResource.cpp  ShaderResource.cpp  ShaderVariantResource.cpp  SkeletonResource.cpp  Texture2DResource.cpp
Code/Engine/RAI/Implementation/Resources/Loaders/: ShaderLoader.cpp  ShaderResourceLoader.cpp  TextureLoader.cpp
Code/Engine/RAI/Import/: Importer.h  MeshImporter.h
Code/Engine/RAI/Resources/: BlendShapeResource.h  ImageResource.h  MeshResource.h  RootMaterialResource.h  SamplerResource.h  ShaderResource.h  ShaderVariantResource.h  SkeletonResource.h  Texture2DResource.h
Code/Engine/RAI/Resources/Loaders/: ShaderLoader.h  ShaderResourceLoader.h  TextureLoader.h
Code/Engine/RHI/: Buffer.h  CMakeLists.txt  CommandList.h  Core.h  Device.h  Factory.h  Fence.h  Framebuffer.h  Input.h  Output.h  Pipeline.h  Profiler.h  RHIDLL.h  RHIPCH.cpp  RenderTarget.h  Rendering.h  Resource.h  ResourceLayout.h  ResourceSet.h  Sampler.h  Shader.h  Swapchain.h  Texture.h
Code/Engine/RHID3D11/: Buffer.h  CMakeLists.txt  CommandList.h  Core.h  Device.h  Fence.h  Framebuffer.h  InputLayout.h  Pipeline.h  Profiler.h  RHID3D11.cpp  RHID3D11DLL.h  RHID3D11PCH.cpp  ResourceFactory.h  ResourceLayout.h  ResourceManager.h  ResourceSet.h  Sampler.h  Shader.h  Swapchain.h  Texture.h
Code/Engine/RHID3D12/: CMakeLists.txt  RHID3D12.cpp  RHID3D12DLL.h  RHID3D12PCH.cpp  RHID3D12PCH.h
Code/Engine/RHIMTL/: Buffer.h  CMakeLists.txt  CommandList.h  Core.h  Device.h  Fence.h  Framebuffer.h  InputLayout.h  Pipeline.h  RHIMTL.cpp  RHIMTLDLL.h  RHIMTLPCH.cpp  ResourceFactory.h  ResourceLayout.h  ResourceSet.h  Sampler.h  Shader.h  Swapchain.h  Texture.h
Code/Engine/RHIMTL/Implementation/: Buffer.cpp  CommandList.cpp  Core.cpp  Device.cpp  Fence.cpp  Framebuffer.cpp  InputLayout.cpp  Pipeline.cpp  ResourceFactory.cpp  ResourceLayout.cpp  ResourceSet.cpp  Sampler.cpp  Shader.cpp  Swapchain.cpp  Swapchain.mm  Texture.cpp
Code/Engine/RHIVK/: CMakeLists.txt  Core.h  Device.h  RHIVK.cpp  RHIVKDLL.h  RHIVKPCH.cpp  RHIVKPCH.h
Code/Engine/RHIVK/Implementation/: Core.cpp  Device.cpp
Code/Engine/RPI/: CMakeLists.txt  Core.h  RPIDLL.h  RPIPCH.cpp
Code/Engine/RendererCore/: CMakeLists.txt  RendererCorePCH.cpp
Code/Engine/Texture/: CMakeLists.txt
Code/EnginePlugins/AmplitudeAudioPlugin/: AmplitudeAudioPlugin.cpp  AmplitudeAudioPluginDLL.h  init.cmake  (+6 more)
Code/Samples/RHISample/: CMakeLists.txt  RHISample.cpp  RHISample.h
Code/Tools/AssetProcessor/: AssetProcessor.cpp  CMakeLists.txt
Code/Tools/AssetProcessor/Importers/: AssimpImporter.cpp  AssimpImporter.h  BlendShapeImporter.cpp  BlendShapeImporter.h  ImageImporter.cpp  ImageImporter.h  Importer.h  MeshImporter.cpp  MeshImporter.h  RootMaterialImporter.cpp  RootMaterialImporter.h  ShaderImporter.cpp  ShaderImporter.h  SkeletonImporter.cpp  SkeletonImporter.h
Code/Tools/AssetProcessor/Processors/: ImageProcessor.cpp  ImageProcessor.h  MeshProcessor.cpp  MeshProcessor.h  Processor.h  RootMaterialProcessor.cpp  RootMaterialProcessor.h  ShaderProcessor.cpp  ShaderProcessor.h
Code/Tools/Libs/ModelImporter2/: CMakeLists.txt
Code/Tools/Libs/ModelImporter2/Importer/: Importer.h
Code/Tools/Libs/ModelImporter2/ImporterAssimp/: AssimpMeshImport.cpp  ImporterAssimp.cpp  ImporterAssimp.h
Data/: CMakeLists.txt
Shaders/: .clang-format  CMakeLists.txt  point.slang
Shaders/Lib/: Common.slang  Core.slang  Materials.slang  RenderingContext.slang
Shaders/Materials/: BasicPBR.slang  Lit.material  Lit.slangm  PBR.slang  StandardPBR.material  StandardPBR.slangm
(+596 files in other folders)
